fix(toast-css): toast上添加z-index

--- a/src/styles/toast.scss
+++ b/src/styles/toast.scss
@@ -15,6 +15,7 @@
     font-size: 30px;
     color: #fff;
     background: rgba(0, 0, 0, 0.7);
+    z-index: 9999;
     & p {
         margin: 0;
     }
